
[metadata]
name = corpus
version = 0.1
author = Haukur Páll Jónsson
author-email = haukurpalljonsson@gmail.com
description = A library for Corpus and Parallel Corpus processing
long-description = file: README.md
license = MIT

[options]
python_requires = >= 3.7.*

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -s --data=./test_data

[pep257]
ignore = D203,D204

[pydocstyle]
ignore = D203,D204
inherit = True

[pylint]
ignore = D203,D204
